# meme-bot

./: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  settings.ini
meme_bot/: anecdote.py  log_utils.py  main.py  meme.py  proxy_utils.py  request_utils.py  strings.py
meme_bot/routers/: common.py
meme_bot/routers/commands/: base.py  user.py
tg_bot/: anecdote.py  config.py  log_utils.py  main.py  meme.py  request_utils.py  strings.py  tg_bot.py
tg_bot/routers/: __init__.py  common.py
tg_bot/routers/commands/: __init__.py  base.py  user.py
