[project]
name = "meme-bot"
version = "0.0.1"
description = "Telegram bot for https://www.anekdot.ru/"
authors = [{ name = "Roman Ryzhkov" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "aiogram>=3.8.0,<4",
    "aiohttp>=3.9.5,<4",
    "beautifulsoup4>=4.12.3,<5",
]

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
]
