[project]
name = "meme-bot"
version = "0.2.2"
description = "Telegram bot for https://www.anekdot.ru/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]
